# mai

./: CMakeLists.txt  Camera.h  Color.h  Spot.h  main.cpp
